[package]
name = "windy"
version = "0.1.1"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/takubokudori/windy"
repository = "https://github.com/takubokudori/windy"
keywords = ["Windows", "ANSI", "Unicode", "Multi-byte"]
description = "A Windows strings library supports AString (ANSI string) and WString (Unicode string)"
readme = "README.md"
edition = "2018"

exclude = [
    ".gitignore",
    "examples/**",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "string"
harness = false

[features]
debug_insufficient_buffer = []
no_std = []

