[package]
name = "windy"
version = "0.3.0"
authors = ["takubokudori <takubokudori@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/takubokudori/windy"
repository = "https://github.com/takubokudori/windy"
keywords = ["windows", "ansi", "unicode", "multibyte"]
description = "A Windows strings library that supports AString (ANSI string) and WString (Unicode string)"
readme = "README.md"
edition = "2024"

exclude = [
    ".gitignore",
    "examples/**",
    ".github/**",
]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "string"
harness = false

[features]
default = ["std"]
debug_insufficient_buffer = []
std = []
